// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateBikeLabels — printed geometry (refactor guard) > standard · all extra fields + prefix + extra 1`] = `
[
  {
    "fill": "255,255,255",
    "h": 4,
    "t": "rect",
    "w": 6,
    "x": 0,
    "y": 0,
  },
  {
    "color": "0,0,0",
    "fs": 14.5,
    "s": "S/D",
    "t": "text",
    "x": 1.632847,
    "y": 0.442985,
  },
  {
    "color": "0,0,0",
    "fs": 14.5,
    "s": "FAULTLINE A1 V2 15" 2026",
    "t": "text",
    "x": 0.525208,
    "y": 0.683374,
  },
  {
    "color": "0,0,0",
    "fs": 14.5,
    "s": "GLOSS BLACK",
    "t": "text",
    "x": 1.068958,
    "y": 0.923762,
  },
  {
    "h": 0,
    "t": "line",
    "w": 3.2,
    "x": 0.2,
    "y": 1.013341,
  },
  {
    "fill": "0,0,0",
    "h": 0.710278,
    "t": "rect",
    "w": 3.232708,
    "x": 0.183646,
    "y": 1.175192,
  },
  {
    "color": "255,255,255",
    "fs": 42.5,
    "s": "03-4614BK",
    "t": "text",
    "x": 0.303646,
    "y": 1.707414,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 0.2,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.271642,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 0.343284,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.462687,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.534328,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 0.60597,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 0.725373,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.820896,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.095522,
    "x": 0.868657,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.98806,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 1.059701,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.131343,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 1.250746,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.298507,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.095522,
    "x": 1.39403,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 1.513433,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.561194,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 1.704478,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 1.776119,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 1.847761,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.943284,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 2.038806,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.134328,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.095522,
    "x": 2.18209,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.301493,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.397015,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 2.444776,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.564179,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 2.61194,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 2.731343,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 2.826866,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.970149,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 3.01791,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 3.089552,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 3.208955,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 3.304478,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 3.352239,
    "y": 1.996164,
  },
  {
    "color": "0,0,0",
    "fs": 13.05,
    "s": "SPECIAL ORDER",
    "t": "text",
    "x": 1.057781,
    "y": 2.807414,
  },
  {
    "color": "0,0,0",
    "fs": 13.05,
    "s": "UPC: 012345678901",
    "t": "text",
    "x": 0.960812,
    "y": 3.023764,
  },
  {
    "color": "0,0,0",
    "fs": 13.05,
    "s": "SN-99",
    "t": "text",
    "x": 1.545344,
    "y": 3.240114,
  },
  {
    "color": "0,0,0",
    "fs": 13.05,
    "s": "MADE IN: TAIWAN",
    "t": "text",
    "x": 1.033312,
    "y": 3.456464,
  },
  {
    "color": "0,0,0",
    "fs": 13.05,
    "s": "P/O: PO-123",
    "t": "text",
    "x": 1.283437,
    "y": 3.672814,
  },
  {
    "h": 2.2,
    "t": "image",
    "w": 2.2,
    "x": 3.6,
    "y": 0.9,
  },
  {
    "fill": "255,255,255",
    "h": 4,
    "t": "rect",
    "w": 6,
    "x": 0,
    "y": 0,
  },
  {
    "color": "0,0,0",
    "fs": 14.5,
    "s": "S/D",
    "t": "text",
    "x": 1.632847,
    "y": 0.442985,
  },
  {
    "color": "0,0,0",
    "fs": 14.5,
    "s": "FAULTLINE A1 V2 15" 2026",
    "t": "text",
    "x": 0.525208,
    "y": 0.683374,
  },
  {
    "color": "0,0,0",
    "fs": 14.5,
    "s": "GLOSS BLACK",
    "t": "text",
    "x": 1.068958,
    "y": 0.923762,
  },
  {
    "h": 0,
    "t": "line",
    "w": 3.2,
    "x": 0.2,
    "y": 1.013341,
  },
  {
    "fill": "0,0,0",
    "h": 0.710278,
    "t": "rect",
    "w": 3.232708,
    "x": 0.183646,
    "y": 1.175192,
  },
  {
    "color": "255,255,255",
    "fs": 42.5,
    "s": "03-4614BK",
    "t": "text",
    "x": 0.303646,
    "y": 1.707414,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 0.2,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.271642,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 0.343284,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.462687,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.534328,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 0.60597,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 0.725373,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.820896,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.095522,
    "x": 0.868657,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.98806,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 1.059701,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.131343,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 1.250746,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.298507,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.095522,
    "x": 1.39403,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 1.513433,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.561194,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 1.704478,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 1.776119,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 1.847761,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.943284,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 2.038806,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.134328,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.095522,
    "x": 2.18209,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.301493,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.397015,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 2.444776,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.564179,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 2.61194,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 2.731343,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 2.826866,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.970149,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 3.01791,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 3.089552,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 3.208955,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 3.304478,
    "y": 1.996164,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 3.352239,
    "y": 1.996164,
  },
  {
    "color": "0,0,0",
    "fs": 13.05,
    "s": "SPECIAL ORDER",
    "t": "text",
    "x": 1.057781,
    "y": 2.807414,
  },
  {
    "color": "0,0,0",
    "fs": 13.05,
    "s": "UPC: 012345678901",
    "t": "text",
    "x": 0.960812,
    "y": 3.023764,
  },
  {
    "color": "0,0,0",
    "fs": 13.05,
    "s": "SN-99",
    "t": "text",
    "x": 1.545344,
    "y": 3.240114,
  },
  {
    "color": "0,0,0",
    "fs": 13.05,
    "s": "MADE IN: TAIWAN",
    "t": "text",
    "x": 1.033312,
    "y": 3.456464,
  },
  {
    "color": "0,0,0",
    "fs": 13.05,
    "s": "P/O: PO-123",
    "t": "text",
    "x": 1.283437,
    "y": 3.672814,
  },
  {
    "h": 2.2,
    "t": "image",
    "w": 2.2,
    "x": 3.6,
    "y": 0.9,
  },
]
`;

exports[`generateBikeLabels — printed geometry (refactor guard) > standard · both 1`] = `
[
  {
    "fill": "255,255,255",
    "h": 4,
    "t": "rect",
    "w": 6,
    "x": 0,
    "y": 0,
  },
  {
    "color": "0,0,0",
    "fs": 31.5,
    "s": "FAULTLINE A1",
    "t": "text",
    "x": 0.28625,
    "y": 0.754107,
  },
  {
    "color": "0,0,0",
    "fs": 31.5,
    "s": "V2 15" 2026",
    "t": "text",
    "x": 0.588125,
    "y": 1.313008,
  },
  {
    "color": "0,0,0",
    "fs": 31.5,
    "s": "GLOSS BLACK",
    "t": "text",
    "x": 0.211875,
    "y": 1.871908,
  },
  {
    "h": 0,
    "t": "line",
    "w": 3.2,
    "x": 0.2,
    "y": 2.04744,
  },
  {
    "fill": "0,0,0",
    "h": 0.710278,
    "t": "rect",
    "w": 3.232708,
    "x": 0.183646,
    "y": 2.220658,
  },
  {
    "color": "255,255,255",
    "fs": 42.5,
    "s": "03-4614BK",
    "t": "text",
    "x": 0.303646,
    "y": 2.752881,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 0.2,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.271642,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 0.343284,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.462687,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.534328,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 0.60597,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 0.725373,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.820896,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.095522,
    "x": 0.868657,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.98806,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 1.059701,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.131343,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 1.250746,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.298507,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.095522,
    "x": 1.39403,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 1.513433,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.561194,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 1.704478,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 1.776119,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 1.847761,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.943284,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 2.038806,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.134328,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.095522,
    "x": 2.18209,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.301493,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.397015,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 2.444776,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.564179,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 2.61194,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 2.731343,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 2.826866,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.970149,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 3.01791,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 3.089552,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 3.208955,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 3.304478,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 3.352239,
    "y": 3.045893,
  },
  {
    "h": 2.2,
    "t": "image",
    "w": 2.2,
    "x": 3.6,
    "y": 0.9,
  },
  {
    "fill": "255,255,255",
    "h": 4,
    "t": "rect",
    "w": 6,
    "x": 0,
    "y": 0,
  },
  {
    "color": "0,0,0",
    "fs": 31.5,
    "s": "FAULTLINE A1",
    "t": "text",
    "x": 0.28625,
    "y": 0.754107,
  },
  {
    "color": "0,0,0",
    "fs": 31.5,
    "s": "V2 15" 2026",
    "t": "text",
    "x": 0.588125,
    "y": 1.313008,
  },
  {
    "color": "0,0,0",
    "fs": 31.5,
    "s": "GLOSS BLACK",
    "t": "text",
    "x": 0.211875,
    "y": 1.871908,
  },
  {
    "h": 0,
    "t": "line",
    "w": 3.2,
    "x": 0.2,
    "y": 2.04744,
  },
  {
    "fill": "0,0,0",
    "h": 0.710278,
    "t": "rect",
    "w": 3.232708,
    "x": 0.183646,
    "y": 2.220658,
  },
  {
    "color": "255,255,255",
    "fs": 42.5,
    "s": "03-4614BK",
    "t": "text",
    "x": 0.303646,
    "y": 2.752881,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 0.2,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.271642,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 0.343284,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.462687,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.534328,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 0.60597,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 0.725373,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.820896,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.095522,
    "x": 0.868657,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 0.98806,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 1.059701,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.131343,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 1.250746,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.298507,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.095522,
    "x": 1.39403,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 1.513433,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.561194,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 1.704478,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 1.776119,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 1.847761,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 1.943284,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 2.038806,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.134328,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.095522,
    "x": 2.18209,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.301493,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.397015,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 2.444776,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.564179,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 2.61194,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 2.731343,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 2.826866,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 2.970149,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 3.01791,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 3.089552,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.071642,
    "x": 3.208955,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.023881,
    "x": 3.304478,
    "y": 3.045893,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.047761,
    "x": 3.352239,
    "y": 3.045893,
  },
  {
    "h": 2.2,
    "t": "image",
    "w": 2.2,
    "x": 3.6,
    "y": 0.9,
  },
]
`;

exports[`generateBikeLabels — printed geometry (refactor guard) > standard · parts item with explicit color 1`] = `
[
  {
    "fill": "255,255,255",
    "h": 4,
    "t": "rect",
    "w": 6,
    "x": 0,
    "y": 0,
  },
  {
    "color": "0,0,0",
    "fs": 34.5,
    "s": "RACK",
    "t": "text",
    "x": 1.11,
    "y": 0.785291,
  },
  {
    "color": "0,0,0",
    "fs": 34.5,
    "s": "STRUTS",
    "t": "text",
    "x": 0.846458,
    "y": 1.404902,
  },
  {
    "color": "0,0,0",
    "fs": 31.05,
    "s": "SILVER",
    "t": "text",
    "x": 1.062562,
    "y": 1.976597,
  },
  {
    "h": 0,
    "t": "line",
    "w": 3.2,
    "x": 0.2,
    "y": 2.157789,
  },
  {
    "fill": "0,0,0",
    "h": 0.599167,
    "t": "rect",
    "w": 3.23,
    "x": 0.185,
    "y": 2.333125,
  },
  {
    "color": "255,255,255",
    "fs": 34.5,
    "s": "PKD-215RAC",
    "t": "text",
    "x": 0.305,
    "y": 2.776458,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 0.2,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 0.266207,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 0.332414,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 0.442759,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 0.531034,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 0.61931,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 0.685517,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 0.729655,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 0.84,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 0.928276,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 0.972414,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 1.082759,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 1.171034,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 1.237241,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 1.303448,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 1.413793,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 1.502069,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 1.612414,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 1.656552,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 1.722759,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 1.833103,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 1.89931,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 1.965517,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.075862,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 2.142069,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.252414,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 2.296552,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.384828,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.428966,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 2.517241,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.627586,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.715862,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 2.804138,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.870345,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.914483,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 3.002759,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 3.113103,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 3.223448,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 3.311724,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 3.355862,
    "y": 3.048042,
  },
  {
    "h": 2.2,
    "t": "image",
    "w": 2.2,
    "x": 3.6,
    "y": 0.9,
  },
  {
    "fill": "255,255,255",
    "h": 4,
    "t": "rect",
    "w": 6,
    "x": 0,
    "y": 0,
  },
  {
    "color": "0,0,0",
    "fs": 34.5,
    "s": "RACK",
    "t": "text",
    "x": 1.11,
    "y": 0.785291,
  },
  {
    "color": "0,0,0",
    "fs": 34.5,
    "s": "STRUTS",
    "t": "text",
    "x": 0.846458,
    "y": 1.404902,
  },
  {
    "color": "0,0,0",
    "fs": 31.05,
    "s": "SILVER",
    "t": "text",
    "x": 1.062562,
    "y": 1.976597,
  },
  {
    "h": 0,
    "t": "line",
    "w": 3.2,
    "x": 0.2,
    "y": 2.157789,
  },
  {
    "fill": "0,0,0",
    "h": 0.599167,
    "t": "rect",
    "w": 3.23,
    "x": 0.185,
    "y": 2.333125,
  },
  {
    "color": "255,255,255",
    "fs": 34.5,
    "s": "PKD-215RAC",
    "t": "text",
    "x": 0.305,
    "y": 2.776458,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 0.2,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 0.266207,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 0.332414,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 0.442759,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 0.531034,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 0.61931,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 0.685517,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 0.729655,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 0.84,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 0.928276,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 0.972414,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 1.082759,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 1.171034,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 1.237241,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 1.303448,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 1.413793,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 1.502069,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 1.612414,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 1.656552,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 1.722759,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 1.833103,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 1.89931,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 1.965517,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.075862,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 2.142069,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.252414,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 2.296552,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.384828,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.428966,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 2.517241,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.627586,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.715862,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 2.804138,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.870345,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 2.914483,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 3.002759,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 3.113103,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.066207,
    "x": 3.223448,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.022069,
    "x": 3.311724,
    "y": 3.048042,
  },
  {
    "fill": "0,0,0",
    "h": 0.55,
    "t": "rect",
    "w": 0.044138,
    "x": 3.355862,
    "y": 3.048042,
  },
  {
    "h": 2.2,
    "t": "image",
    "w": 2.2,
    "x": 3.6,
    "y": 0.9,
  },
]
`;
